# league_piper

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/league_piper/: __init__.py  league_piper.py
tests/: test_league_piper.py
